[package]
name = "fund"
version = "0.1.0"
authors = ["E-Neo <e-neo@qq.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
json5 = "0.2"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
soup = "0.5"
tokio = { version = "0.2", features = ["full"] }