[package]
name = "fund"
version = "0.1.0"
authors = ["E-Neo <e-neo@qq.com>"]
edition = "2018"

[build-dependencies]
font-kit = "0.8"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
iced = "0.2"
lazy_static = "1.4"
regex = "1.4"
tokio = { version = "1.4", features = ["net"] }
